<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.95"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee"
        tools:srcCompat="@drawable/coffee" />

    <Button
        android:id="@+id/LogInBtn"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:alpha=".8"
        android:background="@drawable/background_login"
        android:text="@string/LogIn"
        android:textColor="#00A6FF"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:background="@drawable/background_signup"
        android:text="@string/SignUp"
        android:textColor="#00A6FF"
        app:layout_constraintEnd_toEndOf="@+id/LogInBtn"
        app:layout_constraintStart_toStartOf="@+id/LogInBtn"
        app:layout_constraintTop_toBottomOf="@+id/LogInBtn" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".95"
        android:ems="10"
        app:fontFamily="@font/berkshire_regular"
        android:gravity="center"
        android:text="@string/SimpleChef"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/LogInBtn"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <Button
            android:id="@+id/FacebookLogin"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:alpha=".8"
            android:background="@drawable/background_signup"
            android:text="@string/FacebookLogin"
            android:textColor="#00A6FF"
            app:layout_constraintEnd_toEndOf="@+id/LogInBtn"
            app:layout_constraintStart_toStartOf="@+id/LogInBtn"
            app:layout_constraintTop_toBottomOf="@+id/LogInBtn"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/GoogleLogin"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:alpha=".8"
            android:background="@drawable/background_signup"
            android:text="@string/GoogleLogin"
            android:textColor="#00A6FF"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/FacebookLogin"
            app:layout_constraintStart_toStartOf="@+id/FacebookLogin"
            app:layout_constraintTop_toBottomOf="@+id/FacebookLogin" />

    <ImageView
        android:id="@+id/FacebookIcon"
        android:layout_width="34dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/googleicon"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="432dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="@+id/FacebookLogin"
        app:layout_constraintTop_toTopOf="@+id/FacebookLogin"
        app:layout_constraintBottom_toBottomOf="@+id/FacebookLogin"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/GoogleIcon"
        android:layout_width="34dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/googleicon"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="432dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="@+id/GoogleLogin"
        app:layout_constraintTop_toTopOf="@+id/GoogleLogin"
        app:layout_constraintBottom_toBottomOf="@+id/GoogleLogin"
        android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>