<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_login"
            android:text="@string/LogIn"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <TextView
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:gravity="center"
            android:text="@string/SimpleChef"
            android:textColor="#FFFFFF"
            android:textSize="60sp"
            app:fontFamily="@font/berkshire_regular"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44" />

        <Button
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:background="@drawable/background_login_other"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/FacebookLogin"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
            app:layout_constraintStart_toStartOf="@+id/editTextTitle"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

        <Button
            android:id="@+id/buttonGoogleLogin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:background="@drawable/background_login_other"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/GoogleLogin"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
            app:layout_constraintStart_toStartOf="@+id/editTextTitle"
            app:layout_constraintTop_toBottomOf="@+id/buttonFacebookLogin" />


        <TextView
            android:id="@+id/textViewOr"
            android:layout_width="21dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:alpha=".5"
            android:gravity="center"
            android:text="@string/OR"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/buttonFacebookLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
            tools:text="@string/OR" />

        <ImageView
            android:id="@+id/imageViewOrLine1"
            android:layout_width="130dp"
            android:layout_height="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@null"
            android:src="@drawable/login_lines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

        <ImageView
            android:id="@+id/imageViewOrLine2"
            android:layout_width="130dp"
            android:layout_height="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@null"
            android:src="@drawable/login_lines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

        <EditText
            android:id="@+id/textViewUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:hint="@string/Username"
            android:inputType="text"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
            app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
            app:layout_constraintStart_toStartOf="@+id/editTextTitle"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
            app:layout_constraintVertical_bias="0.42000002" />

        <EditText
            android:id="@+id/textViewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:gravity="start"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
            app:layout_constraintEnd_toEndOf="@+id/editTextTitle"
            app:layout_constraintStart_toStartOf="@+id/editTextTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewUsername"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageViewLockIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:alpha=".7"
            android:contentDescription="@null"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPassword"
            app:layout_constraintEnd_toEndOf="@+id/textViewPassword"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/textViewPassword"
            app:layout_constraintTop_toTopOf="@+id/textViewPassword"
            app:layout_constraintVertical_bias="0.23000002"
            app:srcCompat="@drawable/lock" />

        <ImageView
            android:id="@+id/imageViewUserIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:alpha=".7"
            android:contentDescription="@null"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
            app:layout_constraintEnd_toEndOf="@+id/textViewUsername"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/textViewUsername"
            app:layout_constraintTop_toTopOf="@+id/textViewUsername"
            app:srcCompat="@drawable/home_user_icon" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:alpha="1"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@+id/editTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageViewFacebookIcon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:alpha=".7"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/buttonFacebookLogin"
            app:layout_constraintEnd_toEndOf="@+id/buttonFacebookLogin"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="@+id/buttonFacebookLogin"
            app:layout_constraintTop_toTopOf="@+id/buttonFacebookLogin"
            app:srcCompat="@drawable/facebookicon" />

        <ImageView
            android:id="@+id/imageViewGoogleIcon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:alpha=".7"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/buttonGoogleLogin"
            app:layout_constraintEnd_toEndOf="@+id/buttonGoogleLogin"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/buttonGoogleLogin"
            app:layout_constraintTop_toTopOf="@+id/buttonGoogleLogin"
            app:srcCompat="@drawable/googleicon" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUpSentence"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoogleLogin"
            app:layout_constraintVertical_bias="0.488" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:background="@null"
            android:text="@string/SignUp"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toEndOf="@+id/textViewSignUp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoogleLogin"
            app:layout_constraintVertical_bias="0.476" />


</android.support.constraint.ConstraintLayout>